Move to use of Java 7 NIO2 APIs